# mara

./: .env.example  .gitignore  AGENT.md  CLAUDE.md  GITHUB_READY.md  README.md  TECHSPEC.md  pyproject.toml  requirements.txt
.claude/agents/: data-collector.md  perspective-analyst.md  retrospection-evaluator.md  risk-validator.md  strategy-synthesizer.md  user-profile.md
.claude/skills/: mara-architecture-review.skill
.claude/skills/mara-architecture-review/: SKILL.md
.claude/skills/mara-architecture-review/references/: agents.md  architecture.md
docs/: AGENT_TRACKING.md  ARCHITECTURE_REVIEW.md  FLOW_DEFINITIONS.md  QUICKSTART.md  README.md  STATE_PERSISTENCE.md  SYSTEM_SUMMARY.md  UV_SETUP.md  VISUALIZATION_GUIDE.md
outputs/data/: marv_2025-01-17_evaluation.json  marv_2025-01-17_full.json
outputs/visualizations/: marv_2025-01-17_detail.html  marv_timeline.html
src/agents/critic/: README.md
src/agents/data/: AGENT.md
src/agents/macro/: AGENT_PROMPT.md  README.md
src/agents/perspective/: README.md
src/agents/perspective/geopolitical/: AGENT.md
src/agents/perspective/george_soros/: AGENT.md
src/agents/perspective/monetary/: AGENT.md
src/agents/perspective/paul_tudor_jones/: AGENT.md
src/agents/perspective/ray_dalio/: AGENT.md
src/agents/perspective/ray_dalio_macro/: AGENT.md
src/agents/perspective/sector_rotation/: AGENT.md
src/agents/perspective/stanley_druckenmiller/: AGENT.md
src/agents/research/: AGENT.md  README.md
src/agents/retrospection/: AGENT.md  README.md
src/agents/strategy/: AGENT.md  AGENT_PROMPT.md  README.md
src/agents/user_profile/: AGENT.md
src/agents/validation/: AGENT.md  README.md
src/config/: README.md
src/config/flows/: growth.yaml  income.yaml
src/config/personas/: george_soros.yaml  paul_tudor_jones.yaml  ray_dalio.yaml  ray_dalio_macro.yaml  stanley_druckenmiller.yaml  warren_buffett_value.yaml
src/contracts/: data_summary.yaml  perspective_common.yaml  perspective_george_soros.yaml  perspective_paul_tudor_jones.yaml  perspective_ray_dalio.yaml  perspective_stanley_druckenmiller.yaml  retrospection_report.yaml  strategy_report.yaml  user_profile.yaml  validation_report.yaml
src/data/: README.md
src/db/: models.py  schema.sql
src/orchestration/: README.md
src/utils/: README.md
src/validation/: validate.py
tests/: test_models.py
wiki/: README.md  _sidebar.md  index.html
wiki/_shared/market/: events.md  macro.md  sectors.md
wiki/_shared/personas/: ray_dalio.md
wiki/users/8312519452/: profile.md
wiki/users/8312519452/perspective/: george_soros.md  paul_tudor_jones.md  ray_dalio.md  stanley_druckenmiller.md
wiki/users/8312519452/strategy/: current.md
wiki/users/8312519452/validation/: latest.md
