[project]
name = "mara"
version = "0.1.0"
description = "Macro Asset Rebalance Agent - AI-driven portfolio optimization system"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = {text = "MIT"}
authors = [
    {name = "Marv", email = "marv@example.com"}
]

dependencies = [
    # Core
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "pyyaml>=6.0",

    # LangChain & LangGraph
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-anthropic>=0.2.0",

    # Anthropic
    "anthropic>=0.40.0",

    # Data Processing
    "pandas>=2.1.0",
    "numpy>=1.24.0,<2.0.0",
    "scipy>=1.11.0",

    # Financial Data
    "yfinance>=0.2.50",
    "pandas-datareader>=0.10.0",

    # Portfolio Optimization
    "cvxpy>=1.4.0",

    # Visualization
    "matplotlib>=3.8.0",
    "plotly>=5.18.0",
    "seaborn>=0.13.0",

    # HTTP & API
    "httpx>=0.25.0",
    "requests>=2.31.0",

    # CLI
    "click>=8.1.0",
    "rich>=13.7.0",

    # Logging
    "loguru>=0.7.0",

    # Database
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",

    # Utilities
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",

    # Linting & Formatting
    "ruff>=0.1.0",
    "black>=23.0.0",
    "mypy>=1.7.0",

    # Type stubs
    "pandas-stubs>=2.1.0",
    "types-requests>=2.31.0",
    "types-pyyaml>=6.0.0",
]

cache = [
    # Advanced caching
    "redis>=5.0.0",
]

[project.scripts]
mara = "src.orchestration.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]

ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[[tool.mypy.overrides]]
module = [
    "yfinance.*",
    "pandas_datareader.*",
    "cvxpy.*",
    "plotly.*",
]
ignore_missing_imports = true

[tool.ty.environment]
python-version = "3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--tb=short",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
]

asyncio_mode = "auto"
